# noxious

./: .codecov.yml  .gitignore  .releaserc.yml  ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile.arm64  Dockerfile.armv7  LICENSE-MIT  README.md
.cargo/: config
.github/workflows/: build_image.yml  release-please.yml  unit_tests.yml
cli/: Cargo.toml
client/: Cargo.toml
client/src/: client.rs  error.rs  lib.rs  proxy.rs
client/tests/: client.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs  link.rs  proxy.rs  random.rs  server.rs  signal.rs  socket.rs  state.rs  stream.rs  toxic.rs
core/src/tests/: mod.rs  proxy.rs  socket_mocks.rs
core/src/toxics/: bandwidth.rs  latency.rs  limit_data.rs  mod.rs  noop.rs  slicer.rs  slow_close.rs  test_utils.rs  timeout.rs
scripts/: flamegraph.sh  install-semantic-release.sh  publish-image.sh  run-coverage.sh
server/: Cargo.toml
server/src/: args.rs  error.rs  file.rs  main.rs  store.rs  util.rs
server/src/api/: filters.rs  handlers.rs  mod.rs
