[package]
name = "noxious"
description = "The core library for noxious, a Rust port of Toxiproxy"
version = "0.1.1-alpha.0"
authors = ["Oguz Bilgener <oguz@bilgener.me>"]
repository = "https://github.com/oguzbilgener/noxious"
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["network-programming", "development-tools"]
keywords = ["proxy", "toxiproxy", "chaos", "tcp"]

include = [
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
    ".gitignore",
    "Cargo.toml",
    "src/*.rs",
    "src/*/*.rs",
    "tests/*.rs",
    "benches/**/*.rs",
]


[badges]
maintenance = { status = "actively-developed" }

[dependencies]
tokio = { version = "1", features = ["net", "sync", "signal", "io-util", "rt", "macros", "time"] }
rand = { version = "0.8.3", features = ["std_rng"] }
bytes = "1.0.1"
serde = { version = "^1.0.123", features = ["derive"] }
tokio-util = { version = "0.6.3", features = ["codec"] }
thiserror = "1.0.23"
futures = { version = "0.3.12" }
bmrng = "0.4.0"
tracing = { version = "0.1.25", features = ["log"] }
async-trait = "0.1.47"

[dev-dependencies]
tokio = { version = "1", features = [
    "net",
    "sync",
    "signal",
    "io-util",
    "rt",
    "macros",
    "time",
    "test-util",
] }
mockall = "0.9.1"
mock-io = { version = "0.3", features = ["async-tokio"] }
lazy_static = "1.4.0"
serde_json = "^1.0.62"
tokio-test = "0.4.0"
