[package]
name = "noxious-server"
version = "0.1.0"
authors = ["Oguz Bilgener <oguz@bilgener.me>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["macros", "sync", "net", "rt-multi-thread", "signal"] }
noxious = { path = "../core" }
serde_json = "^1.0.62"
serde = "^1.0.123"
serde_derive = "^1.0.123"
warp = "0.3.0"
tracing = { version = "0.1.25", features = ["log", "log-always"] }
tracing-log = { version = "0.1.2", features = ["env_logger", "log-tracer"] }
tracing-opentelemetry = "0.11.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
bmrng = "0.4.0"
