[package]
name = "noxious-server"
version = "1.0.4"
authors = ["Oguz Bilgener <oguz@bilgener.me>"]
edition = "2018"
publish = false

[dependencies]
noxious = { path = "../core" }
tokio = { version = "1", features = ["macros", "sync", "net", "rt-multi-thread", "signal"] }
futures = { version = "0.3.12" }
bytes = "1.0.1"
serde_json = "^1.0.62"
serde = { version = "^1.0.123", features = ["derive"] }
warp = { version = "0.3.0", features = [], default-features = false }
async-trait = "0.1.47"
tracing = { version = "0.1.25", features = ["attributes", "log", "log-always"] }
tracing-log = { version = "0.1.2", features = ["env_logger", "log-tracer"] }
tracing-opentelemetry = "0.11.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
bmrng = "0.4.0"
thiserror = "1.0.24"
clap = { version = "3.0", features = ["derive"] }
opentelemetry = "0.12.0"

[dev-dependencies]
tokio-test = "0.4.0"
lazy_static = "1.4.0"
mockall = "0.9.1"
